tests/invalid/list_extend_wrong_arg_count/main.py
def run_case() -> None:
    xs: list[int] = [2, 1]
    xs.extend()


if __name__ == "__main__":
    run_case()
